k8s/rollout-canary.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-my-app
  namespace: cicd
spec:
  replicas: 5
  strategy:
    canary:
      canaryService: rollouts-my-app-canary-service
      stableService: rollouts-my-app-stable-service
      trafficRouting:
        nginx:
          stableIngress: rollouts-my-app-ingress
          annotationPrefix: nginx.ingress.kubernetes.io
      steps:
        - setWeight: 20
        - pause: {}
        - setWeight: 40
        - pause: { duration: 10 }
        - setWeight: 60
        - pause: { duration: 10 }
        - setWeight: 80
        - pause: { duration: 10 }
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollouts-my-app
  template:
    metadata:
      labels:
        app: rollouts-my-app
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: rollouts-my-app
          image: argoproj/rollouts-demo:blue
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
