k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-my-app-canary-service
  namespace: cicd
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollouts-my-app
---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-my-app-stable-service
  namespace: cicd
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollouts-my-app
